--- a/src/GanttComponents/Pages/GanttComposerDemo.razor
+++ b/src/GanttComponents/Pages/GanttComposerDemo.razor
@@ -153,7 +153,7 @@ else
     private bool ShowDebugAlignment { get; set; } = false;
     
     // Timeline Zoom Control properties
-    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.MonthWeekOptimal50px; // Test MonthWeek pattern
+    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.MonthWeek; // Test MonthWeek pattern
     private double CurrentZoomFactor { get; set; } = 1.0;
     
     // Task Filter properties
