--- a/src/GanttComponents/Pages/TimelineDemo.razor
+++ b/src/GanttComponents/Pages/TimelineDemo.razor
@@ -133,7 +133,7 @@
     private GanttTask? SelectedTaskInfo { get; set; }
     
     // State properties
-    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.MonthWeekOptimal50px;
+    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.MonthWeek;
     private double CurrentZoomFactor { get; set; } = 1.0;
     private TaskFilterCriteria CurrentFilterCriteria { get; set; } = new();
     
