--- a/src/GanttComponents/Components/GanttComposer/GanttComposer.razor
+++ b/src/GanttComponents/Components/GanttComposer/GanttComposer.razor
@@ -59,7 +59,7 @@
     [Parameter] public TaskFilterCriteria? FilterCriteria { get; set; }
     
     // Timeline Zoom Parameters
-    [Parameter] public TimelineZoomLevel ZoomLevel { get; set; } = TimelineZoomLevel.MonthWeekOptimal50px;
+    [Parameter] public TimelineZoomLevel ZoomLevel { get; set; } = TimelineZoomLevel.MonthWeek;
     [Parameter] public double ZoomFactor { get; set; } = 1.6;
     [Parameter] public EventCallback<TimelineZoomLevel> OnZoomLevelChanged { get; set; }
     [Parameter] public EventCallback<double> OnZoomFactorChanged { get; set; }
